--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
-/*#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}*/
-
 
 body {
   font-family: Arial, sans-serif;
@@ -39,6 +32,7 @@ main{
   top: 0;
   left: 0;
   z-index: 1000;
+  text-decoration: none;
 }
 
 .nav-links {
@@ -48,10 +42,25 @@ main{
   gap: 1rem;
 }
 
-.nav-links li a {
- /* margin-left: -50px;*/
-  color: white;
+.nav-links a{
   text-decoration: none;
+  color: rgb(0, 255, 0);
+  transition: transform 0.3s ease-in-out;
+}
+.nav-links a:hover {
+  color: hsl(308, 100%, 50%);
+  transform: scale(1.2); 
+}
+
+.titulo{
+  text-align: center;
+}
+
+.categoria-titulo {
+  min-height: 40px; /* ajustá según tu diseño */
+  text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
 }
 
 
