--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f8f9fa;
+  background-color: #323335;
 }
 main{
   width: 100%;
@@ -15,13 +15,14 @@ main{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  gap: 40px;
   padding: 20px;
 }
 
 
 .navbar {
   width: 100%;  
+  border-bottom: 1px solid rgb(0, 255, 0);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -54,9 +55,11 @@ main{
 
 .titulo{
   text-align: center;
+  color: aliceblue;
 }
 
 .categoria-titulo {
+  color: aliceblue;
   min-height: 40px; /* ajustá según tu diseño */
   text-align: center;
   font-size: 1.5rem;
@@ -64,6 +67,7 @@ main{
 }
 
 .detalle {
+  color: aliceblue;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -73,10 +77,12 @@ main{
 
 
 .detalle-div{
+  color: aliceblue;
   text-align: center;
   width: 650px;
 }
 .parrafo{
+  color: aliceblue;
   text-align: justify;
 }
 
@@ -100,7 +106,15 @@ main{
   height: auto;
   border: solid 1px chocolate;
   border-radius: 5px;
+  box-shadow: 0 0 15px 3px limegreen;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
+
+.item-products:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px 5px limegreen;
+}
+
 
 
 .item-list{
@@ -116,8 +130,6 @@ main{
 .item-list-container li {
   font-size: 1.2rem;
 }
-
-
 
 .logo {
   width: 150px;
