Se corrige error en el array de productos, se pone detalle en minuscula en la categoria fertilizantes ya que no se visualizaba

--- a/src/App.css
+++ b/src/App.css
@@ -66,12 +66,12 @@ main{
   margin-bottom: 1rem;
 }
 
-.detalle {
+.detail {
   color: aliceblue;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  min-height: 50vh;
   width: 100%;
 }
 
