--- a/src/App.css
+++ b/src/App.css
@@ -190,3 +190,28 @@ main{
 .contacto{
   color: white;
 }
+
+.vista-checkout{
+  text-align: center;
+  position: relative;
+  left: 50vw;
+  transform: translateX(-50%);
+}
+
+.vista-checkout h1{
+ color: #0c7a0c;
+}
+
+.vista-checkout a{
+  color: #000;
+  background-color: #e4e8ec;
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 5px;
+  border: 3px solid rgb(87, 234, 14);
+}
+
+.card{
+  color: #e4e8ec;
+}
+
